--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <a href="../01 - Start here/start/index.html">asi taba al principio</a><br>
+  <a href="../index.html">asi taba al principio</a><br>
 
   <section class="pricing">
     <h2 class="section-title">pricing</h2>
